students/Gorodnichuk_Ilya_Aleksandrovich/Task_02/src/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app02-service
  namespace: web02
  labels:
    app: app02
    org.bstu.student.fullname: "Gorodnichuk_Ilya_Aleksandrovich"
    org.bstu.student.id: "22023"
    org.bstu.group: "AS-576"
    org.bstu.variant: "02"
    org.bstu.course: "RSIOT"
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: app02
