students/Gorodnichuk_Ilya_Aleksandrovich/Task_02/src/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app02-ingress
  namespace: web02
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    org.bstu.student.fullname: "Gorodnichuk_Ilya_Aleksandrovich"
    org.bstu.student.id: "22023"
    org.bstu.group: "AS-576"
    org.bstu.variant: "02"
spec:
  ingressClassName: nginx
  rules:
    - host: app02.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app02-service
                port:
                  number: 8082
